@@ -160,6 +160,17 @@ class OrOperation(LogicOperation):
 
         return group.universe.atoms[idx]
 
+def return_empty_on_apply(func):
+    """
+    Decorator to return empty AtomGroups from the apply() function
+    without evaluating it
+    """
+    @functools.wraps(func)
+    def apply(self, group):
+        if len(group) == 0:
+            return group
+        return func(self, group)
+    return apply
 
 class _Selectionmeta(type):
     def __init__(cls, name, bases, classdict):
@@ -262,6 +273,7 @@ class AroundSelection(DistanceSelection):
         self.cutoff = float(tokens.popleft())
         self.sel = parser.parse_expression(self.precedence)
 
+    @return_empty_on_apply
     def apply(self, group):
         indices = []
         sel = self.sel.apply(group)
@@ -290,6 +302,7 @@ class SphericalLayerSelection(DistanceSelection):
         self.exRadius = float(tokens.popleft())
         self.sel = parser.parse_expression(self.precedence)
     
+    @return_empty_on_apply
     def apply(self, group):
         indices = []
         sel = self.sel.apply(group)
@@ -315,6 +328,7 @@ class SphericalZoneSelection(DistanceSelection):
         self.cutoff = float(tokens.popleft())
         self.sel = parser.parse_expression(self.precedence)
 
+    @return_empty_on_apply
     def apply(self, group):
         indices = []
         sel = self.sel.apply(group)
@@ -331,6 +345,7 @@ class SphericalZoneSelection(DistanceSelection):
 
 
 class CylindricalSelection(Selection):
+    @return_empty_on_apply
     def apply(self, group):
         sel = self.sel.apply(group)
 
@@ -424,6 +439,7 @@ class PointSelection(DistanceSelection):
         self.ref = np.array([x, y, z], dtype=np.float32)
         self.cutoff = float(tokens.popleft())
 
+    @return_empty_on_apply
     def apply(self, group):
         indices = []
         box = self.validate_dimensions(group.dimensions)
@@ -517,6 +533,7 @@ class StringSelection(Selection):
 
         self.values = vals
 
+    @return_empty_on_apply
     def apply(self, group):
         mask = np.zeros(len(group), dtype=np.bool)
         for val in self.values:
