@@ -14,7 +14,7 @@ The rules for this file:
 
 ------------------------------------------------------------------------------
 ??/??/20 richardjgowers, IAlibay, orbeckst, tylerjereddy, jbarnoud,
-         yuxuanzhuang, VOD555, lilyminium
+         yuxuanzhuang, lilyminium, VOD555
 
   * 1.0.1
 
@@ -24,6 +24,8 @@ Fixes
   * Testsuite does not use any more matplotlib.use('agg') (#2191)
   * In ChainReader, read_frame does not trigger change of iterating position.
     (Issue #2723, PR #2815)
+  * empty_atomgroup.select_atoms('name *') now returns an empty
+    AtomGroup instead of TypeError (Issue #2765)
   * rdf.InterRDF_s density keyword documented and now gives correct results for
     density=True; the keyword was available since 0.19.0 but with incorrect
     semantics and not documented and did not produce correct results (Issue
